Fix F3/Shift-F3

--- a/src/App/Resources/common.css
+++ b/src/App/Resources/common.css
@@ -44,6 +44,6 @@ ul, ol {
 }
 
 .highlight {
-    background-color: blue;
+    background-color: Highlight;
 }
 
